kube/ingress.yaml
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-ingress
  namespace: nest-redis
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /redis
            pathType: Prefix
            backend:
              service:
                name: nestjs-service
                port:
                  number: 80
